assets/css/app.css
*, *::before, *::after {
    box-sizing: border-box;
}

:root{
    --blue-color:#0079bb;
    --orange-color: #9c1003;
}
a:hover{
    transform:scale(0.9);
    color:rgba(51, 49, 50, 0.5);
}

body {
    margin:0;
    font-family: "Libre Baskerville", sans-serif;
    color: #333;
}

header{
    box-shadow: 0 1px 0 1px rgba(0,0,0,0.1);
}
img{
    max-width: 100%;
    border-radius: 2px;
}

a{
    color:var(--blue-color);
    text-decoration: none;
}

.mb-5{
    margin-bottom: 2rem;
}

.m-sides{
    margin-left: 1.5rem;
    margin-right: 1.5rem;
}

.main-nav{
    display:flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 1rem;
    padding-bottom: 1rem;
    margin-left: 1rem;
    margin-right: 1rem;
}

.nav-toggles{
    display:flex;
    justify-content: space-between;
    align-items: center;
    width: 30%;    
}

.nav-logo{
    width: 10rem;
}

.nav-toggle{
    font-size: 3rem;
}

.nav-phone{
    font-size: 2.5rem;
}

.nav-links,
.nav-phone-lg{
    display:none;
}

@media screen and (min-width:400px) {
    .nav-toggles{
        justify-content:space-evenly;
    }
}


@media screen and (min-width:1000px) {
    .nav-toggles{
        display: none;
    }
    .nav-links{
        display: flex;
        width: 50%;
        justify-content: space-evenly;
        font-size: 1.15rem;
       
    }

    .nav-link{
        color:#333;
        font-weight: 700;
    }
    .nav-phone-lg{
        font-size: 1.15rem;
        border-left: 2px solid #333;
        height: 4rem;
        padding-left: 4rem;
        margin-right: 4rem;
        display: flex;
        align-items: center;
    }

    .main-nav{
        justify-content: space-around;
        align-items: center;
        margin-top: 1.8rem;
    }
    .nav-logo{
        width: 13.5rem;
    }
}

.main-content{
    margin-top: 1.5rem;
    /* margin-left: 1rem;
    margin-right: 1rem; */
    text-align: center;
}

.hero{
    display:flex;
    flex-direction:column;

}

.main-title{
    font-size: 2rem;
}

.accent-word1{
    color:var(--blue-color);
}

.accent-word2{
    color:var(--orange-color);
}

#intro{
    text-align: center;
}

.hero-img{
    padding-bottom: 1rem;
}

.hero-img{
    max-width: 50%;
    display: none;
}

.hero {
    color: black;
    height: 60vh;
    margin-left: 0rem;
    margin-right: 0rem;
    background: linear-gradient(0deg, rgba(51, 49, 50, 0.3), rgba(56, 53, 55, 0.3)), url(/assets/images/andrew-wise-LE7RC3l5EeY-unsplash.jpg); 
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.hero{
    display:flex;
    flex-direction: column;
    justify-content: center;
    margin-bottom: 2rem;
}

.hero-img{
    max-width: 40%;
    display: none;
}

.hero-text{
    background-color: rgba(255,255,255,0.6);
    width: 80%;
    max-width: 500px;
    margin: 2rem auto;
    border-radius: 10px;
    padding: 1rem;
    text-align: center;
}

.hero-text p{
    font-weight: 700;
   font-size: 1.2rem;
}

.hero-cta{
    margin: 0.5rem 0 2rem 0;
    display:flex;
    flex-direction: column;
    align-items: center;
}

.hero-cta-contact{
    color: black;
    background-color: rgba(255,255,255,0.8);
    padding: 0.7rem 4rem;
    margin: 2rem 2rem 0 2rem;
    border-radius: 10px;
    text-align: center;
    font-weight: 700;
    font-size: 1rem;
}

.hero-cta-quote{
    color: black;
    background-color: rgba(255,255,255,0.8);
    padding: 0.7rem 2.5rem;
    margin: 2rem 2rem 0 2rem;
    border-radius: 10px;
    text-align: center;
    font-weight: 700;
    font-size: 1rem;
}

@media screen and (min-width:600px) {
    .hero-cta-contact,
    .hero-cta-quote {
        width: 60%;
        max-width: 250px;
        margin: 1.25rem auto;
    }
}

@media screen and (min-width:1000px) {
    .hero-text{
        background-color: rgba(255,255,255,0.5);
        margin-top: 2rem;
        border-radius: 6px;
        padding: 2rem;
    }

    .hero {
        height: 60vh;
        margin-left: -1rem;
        margin-right: -1rem;
        background: linear-gradient(0deg, rgba(51, 49, 50, 0.3), rgba(56, 53, 55, 0.3)), url(../images/andrew-wise-LE7RC3l5EeY-unsplash.jpg); 
        background-repeat: no-repeat;
        background-position: center;
        background-size: cover;
    }
}

.reviews{
    margin-left: 1.5rem;
    margin-right: 1.5rem;
    border: 1px solid var(--orange-color);
    color:var(--blue-color);
    padding-top: 1rem;
    padding-bottom: 1rem;
    text-align: center;
    border-radius: 25px;
}

.review-container{
    margin: 2rem auto;
    width: 70%;
    padding: 1rem 1rem 0 1rem;
    background-color: whitesmoke;
    border: 1px solid rgba(51, 49, 50, 0.3);
    text-align: center;
}

.reviews-title{
    margin-bottom: -1rem;
    color:#333;
}

.reviews-author{
    color:rgba(51, 49, 50, 0.5);
    font-size: 0.9rem;
}

.reviews-body{
    font-size:0.825rem;
    text-align:justify;
}

.reviews-btns{
    display:flex;
    justify-content: space-evenly;
}

.work-together-btn{
    color: var(--orange-color);
}

.projects-btn,
.work-together-btn{
    font-size: 0.86rem;;
}

@media screen and (min-width: 700px) {
    .review-title {
        padding-left: 2rem;
        padding-right: 2rem;
    }  
    
    .review-flex {
        display: flex;
        flex-wrap: wrap;
    }

    .review-container {
        width: 40%;
    }
}

@media screen and (min-width: 1100px) {
    .review-title {
        padding-left: 6rem;
        padding-right: 6rem;
    }  
    
    .review-flex {
        display: flex;
        flex-wrap: wrap;
    }

    .review-container {
        width: 25%;
    }
}

.star-color{
    color: rgb(251, 239, 0);
    font-size: 1.8em;
}

#review-title{
    margin-top: .4rem;
    font-size: 1.2em;
}

.review-logo a{
    width: 25%;
    height:25%;
}

.review-logo a img{
    width:80%;
    height: 80%;
}

.review-logo{
    display:flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    margin-top: 1em;
}
/* ... */

